--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 	</div>
 
 	</div>
-
+<h4 class="display-4 text-center">Projects are a work in progress</h4>
 	<div class="container" id="Projects">
 		<div class="row">
 			<div class="col-sm-6">
