added recent project, silly insult generator

--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
 							badge/door entry management</figcaption>
 					</figure>
 				</div>
-				<div class="futureprojects">
+				
 					<div class="col-sm-6">
-						<figure> <img class="img-thumbnail" src="assets/jurassicparkdoors.png"
-								alt="badge repository project">
-							<figcaption>This is a project I did at one point!</figcaption>
+						<figure> <img class="img-thumbnail" src="assets/sillyinsultgeneratorpic.PNG"
+								alt="MVC Silly Insult Generator">
+							<figcaption>This was an MVC .NET framework project I did halfway through ElevenFifty Academy.  It takes inspiration from madlibs, and is a site to generate silly insults for laughs.</figcaption>
 						</figure>
 					</div>
-				</div>
+				
 			</div>
 		</div>
 	</div>
