--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 			<div class="row">
 
-				<div class="col-sm-1 col-sm-offset-3"><img class="languageicon" src="assets/java.png" alt=""></div>
+				<div class="col-sm-1 col-sm-offset-2"><img class="languageicon" src="assets/java.png" alt=""></div>
 
 				<div class="col-sm-1"><img class="languageicon" src="assets/html5-display.png" alt=""></div>
 
@@ -125,7 +125,9 @@
 				<div class="col-sm-1"><img class="languageicon" src="assets/Oracle_SQL_Developer_logo.svg"></div>
 
 				<div class="col-sm-1 "><img class="languageicon" src="assets/python.png" alt=""></div>
-				<div class="col-sm-3"></div>
+				<div class="col-sm-1 "><img class="languageicon" src="assets/angular8.png" alt=""></div>
+
+				<div class="col-sm-1"></div>
 				<div class="rowoficons">
 				</div>
 			</div>
