--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 			</div>
 
 			<div class="col-sm-6">
-				<figure><a href="https://sillyinsultgenerator.azurewebsites.net/"> <img class="img-thumbnail" src="assets/sillyinsultgeneratorpic.PNG"
+				<figure><a href="https://sillyinsults.azurewebsites.net/"> <img class="img-thumbnail" src="assets/sillyinsultgeneratorpic.PNG"
 						alt="MVC Silly Insult Generator"></a>
 					<figcaption>This was an MVC .NET framework project I did halfway through ElevenFifty Academy. It
 						takes inspiration from madlibs, and is a site to generate silly insults for laughs.</figcaption>
