--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<h2 class="display-2">Hello there!</h2>
 		<p id="abouttext">
 			Straight to the point:
-			I'm Jacob Helou, and if you're looking for a hardworking, persistent, entry-level developer (who's not
+			I'm Jacob Helou, and if you're looking for a hardworking, persistent, developer (who's not
 			afraid of
 			spending hours chasing down a logic bug, like a missing curly brace after an else-if statement), check out
 			my projects and resume, and contact me if you're
@@ -140,7 +140,6 @@
 	</div>
 
 	</div>
-	<h4 class="display-4 text-center">Projects are a work in progress</h4>
 	<div class="container" id="Projects">
 		<div class="row">
 			<div class="col-sm-6">
@@ -149,7 +148,7 @@
 							alt="Static webpage project"></a>
 					<figcaption class="figure-caption">This was a static webpage using just basic html and css before I
 						learned bootstrap was a
-						thing. I'll revisit this with bootstrap at some point</figcaption>
+						thing.</figcaption>
 				</figure>
 			</div>
 
